--- a/nutrition.html
+++ b/nutrition.html
@@ -11,43 +11,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
   <!-- FontAwesome Icons -->
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 
   <style>
-    body {
-      font-family: 'Tajawal', sans-serif;
-      padding-top: 100px;
-    }
-    .logo-text {
-      font-weight: bold;
-      font-size: 1.8rem;
-      color: #0d6efd;
-    }
-    .info-card {
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-      transition: 0.3s;
-      padding: 15px;
-      text-align: center;
-    }
-    .info-card:hover {
-      transform: scale(1.05);
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-    }
-    .cart-icon {
-      position: relative;
-      font-size: 24px;
-    }
-
-    #cart-count {
-      position: absolute;
-      top: -5px;
-      right: -5px;
-      background-color: red;
-      color: white;
-      border-radius: 50%;
-      padding: 5px;
-      font-size: 14px;
-    }
+   
   </style>
 </head>
 
