--- a/sport.html
+++ b/sport.html
@@ -10,7 +10,7 @@
   
   <!-- خط جميل -->
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 
 </head>
 
